--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 # Site Settings
 build                    : 12
 locale                   : "en-US"
-title                    : "#COVID19"
+title                    : "COVID-19"
 title_separator          : " - "
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "David Kisamfu"
