--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 WHO:
-  name      : "WHO"
-  bio       : "World Health Organization"
+  name      : "World Health Organization"
+  bio       : ""
   avatar    : "/assets/images/who.png"
   links:
       - label: "Website"
         icon: "fas fa-fw fa-link"
-        url: "https://www.who.int"
+        url: "https://www.who.int/emergencies/diseases/novel-coronavirus-2019"
       - label: "Twitter"
         icon: "fab fa-fw fa-twitter-square"
         url: "https://twitter.com/who"
