--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : true # true, false (default)
+search                   : false # true, false (default)
 search_full_content      : true # true, false (default)
 search_provider          : "lunr" # lunr (default), algolia, google
 algolia:
