--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ locale                   : "en-US"
 title                    : "COVID-19"
 title_separator          : " - "
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "David Kisamfu"
-description              : "Sharing Knowledge"
+name                     : "COVID-19 Updates"
+description              : "Updates and Resources about COVID-19"
 url                      : "https://covid19.amsha.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
