--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "COVID-19 Updates",
     "theme_color": "#222",
     "background_color": "#fff",
-    "display": "fullscreen",
+    "display": "standalone",
     "icons": [
       {
         "src": "assets/icons/launcher-icon-1x.png",
