--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 # main links
 main:
-- title: "Charts"
-  url: /charts/
 - title: "Resources"
   url: /resources/
+- title: "Charts"
+  url: /charts/
+- title: "Tanzania"
+  url: /tz/
 - title: "FAQs"
   url: /faq/
   # - title: "Quick-Start Guide"
