--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "COVID-19 Updates",
     "theme_color": "#000",
     "background_color": "#fff",
-    "display": "fullscreen",
+    "display": "standalone",
     "gsm_sender_id": "103953800507",
     "icons": [
       {
