--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 minimal_mistakes_skin    : # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-build                    : 92
+build                    : 93
 locale                   : "en-US"
 title                    : "COVID-19"
 title_separator          : " - "
@@ -94,9 +94,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "David Kisamfu"
-  avatar           : "/assets/images/profile.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Sharing Knowledge"
+  name             : "COVID-19"
+  avatar           : "/assets/icons/launcher-icon-4x.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "Updates and Resources about COVID-19"
   location         : "Tanzania"
   email            :
   links:
