--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title_separator          : " - "
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "COVID-19 Updates"
 description              : "Updates and Resources about COVID-19"
-url                      : "https://covid19.amsha.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://covid19.thedextazlab.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/coronavirus.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
